# seraph

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  docker-compose.yml
.githooks/: commit-msg  pre-commit
.github/: pull_request_template.md
.github/workflows/: ci.yml
.understand-anything/: .gitignore  .understandignore  fingerprints.json  knowledge-graph.json  meta.json
api/: Cargo.toml
indexer/: Cargo.toml
indexer/src/: log.rs  main.rs  provider.rs  runner.rs
indexer/src/adapters/: across.rs  axelar.rs  cctp.rs  connext.rs  contracts.rs  hop.rs  layerzero_v2.rs  layerzero_v2_tests.rs  mod.rs  stargate.rs  wormhole.rs
indexer/src/adapters/tests/: across.rs  axelar.rs  cctp.rs  connext.rs  hop.rs  layerzero_v2.rs  stargate.rs  wormhole.rs
shared/: Cargo.toml
shared/migrations/: 0001_create_protocol_adapters.sql  0002_create_cross_chain_events.sql  0003_create_stitched_transactions.sql
shared/src/: adapter.rs  config.rs  error.rs  lib.rs  types.rs
shared/src/db/: mod.rs  models.rs
