[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
seraph-shared       = { workspace = true }
alloy               = { workspace = true }
anyhow              = { workspace = true }
dotenvy             = { workspace = true }
reqwest             = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tokio               = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }