[package]
name = "seraph-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait  = { workspace = true }
chrono       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sqlx         = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
